# CodeforcesCP

./: .replit  README.md  monitor.py  pyproject.toml  replit.nix  template.cpp  watcher.sh
.ccls-cache/@@home@runner@CodeforcesCP/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@algorithm.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@array.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@atomic.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@auto_ptr.h.blob  (+383 more)
166Div2/: q2.cpp  q3.cpp
933Div3/: q1.cpp
937Div4/: q2.cpp  q4.cpp
944Div4/: q1.cpp  q3.cpp  q5.cpp  q6.cpp  q8.cpp
945Div2/: q1.cpp
946Div3/: abc.txt  exp.txt  q1.cpp  q5.cpp
947Div12/: q2.cpp
950Div3/: q2.cpp  q3.cpp
951Div2/: q1.cpp
952Div4/: q2.cpp  q4.cpp
954Div3/: q4.cpp  q5.cpp
955div2/: a.cpp  b.cpp
CF935Div3/: q1.cpp  q2.cpp
CF943Div3/: q2.cpp  q3.cpp  q4.cpp
CFRound938Div3/: q5.cpp
CodeforcesPractice/: q2.cpp
GblRd26/: q1.cpp  q2.cpp
LeetCode/: q1.cpp
Neetcode/: q1.cpp  q12.cpp  q16.cpp  q17.cpp  q3.cpp  q7.cpp
TLE/: 1.cpp  10.cpp  11.cpp  13.cpp  14.cpp  16.cpp  19.cpp  2.cpp  21.cpp  23.cpp  24.cpp  25.cpp  27.cpp  29.cpp  3.cpp  32.cpp  34.cpp  36.cpp  38.cpp  4.cpp  42.cpp  43.cpp  45.cpp  46.cpp  49.cpp  5.cpp  51.cpp  55.cpp  56.cpp  57.cpp  6.cpp  7.cpp  9.cpp  q18.cpp  q19.cpp  q22.cpp  q28.cpp  q3.cpp  q30.cpp  q31.cpp  (+6 more)
cfpractice/: 1.cpp  6.cpp  8.cpp  9.cpp  q10.cpp  q11.cpp  q7.cpp
epicdiv12/: 2.cpp
(+273 files in other folders)
