[tool.poetry]
name = "repl-nix-codeforcescp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_codeforcescp"}]

[tool.poetry.dependencies]
python = "^3.10"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
